--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
 <h3>
 <a id="openstreetmap-an-open-data-project" class="anchor" href="#openstreetmap-an-open-data-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>OpenStreetMap: an open data project</h3>
 
+<p><a href="http://github.com/ethan-nelson/osm/OSM-APA.pdf">Presentation given at the APA workshop</a></p>
+
 <p>The following are informational links to assist you in using OpenStreetMap:</p>
 
 <ul>
 <li><a href="http://www.openstreetmap.org">OpenStreetMap Homepage</a></li>
-<li><a href="http://www.openstreetmap.org">Contributor-maintained wiki</a></li>
+<li><a href="http://wiki.openstreetmap.org">Contributor-maintained wiki</a></li>
 <li><a href="http://wiki.openstreetmap.org/wiki/Map_Features">List of OSM tags</a></li>
 <li><a href="http://overpass-turbo.eu">Overpass API</a></li>
 <li><a href="http://planet.openstreetmap.org">OSM planet files</a></li>
-<li><a href="http://www.switch2osm.org">Detailed information about switching to OSM</a></li>
+<li><a href="http://www.switch2osm.org">Detailed information about switching to OSM for web maps</a></li>
 </ul>
       </section>
       <footer>
