updating presentation link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h3>
 <a id="openstreetmap-an-open-data-project" class="anchor" href="#openstreetmap-an-open-data-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>OpenStreetMap: an open data project</h3>
 
-<p><a href="http://github.com/ethan-nelson/osm/OSM-APA.pdf">Presentation given at the APA workshop</a></p>
+<p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/OSM-APA.pdf">Presentation given at the APA workshop</a></p>
 
 <p>The following are informational links to assist you in using OpenStreetMap:</p>
 
