--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <h3>
 <a id="openstreetmap-an-open-data-project" class="anchor" href="#openstreetmap-an-open-data-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>OpenStreetMap: an open data project</h3>
 
+        <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_Regional_Workshop.pdf">OSM Regional Workshop</a></p>
 <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_OSMDisputes.pdf">State of the Map Disputes Presentation</a></p>
 <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_OSMHallMonitor.pdf">State of the Map Hall Monitor Package Presentation</a></p>
 <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/OSM-APA.pdf">Presentation given at the APA workshop</a></p>
