--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 <h3>
 <a id="openstreetmap-an-open-data-project" class="anchor" href="#openstreetmap-an-open-data-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>OpenStreetMap: an open data project</h3>
+<p>The following are some of the presentations I have given about or related to OSM at meetings, workshops, and summits. There are a few instances where I have used an image from some other source, and those are labeled. All other material is released under <a href="https://creativecommons.org/licenses/by/3.0/legalcode" target="_blank">CC-BY 3.0</a>. (I always appreciate knowing that this information is useful for others, so don't be shy and <a href="http://ethan-nelson.me/contact/">let me know</a> if you use it!)</p>
 
-        <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_Regional_Workshop.pdf">OSM Regional Workshop</a></p>
+<p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_Regional_Workshop.pdf">OSM Regional Workshop</a></p>
 <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_OSMDisputes.pdf">State of the Map Disputes Presentation</a></p>
 <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/ENelson_OSMHallMonitor.pdf">State of the Map Hall Monitor Package Presentation</a></p>
 <p><a href="https://github.com/ethan-nelson/osm/raw/gh-pages/OSM-APA.pdf">Presentation given at the APA workshop</a></p>
